<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:orientation="vertical">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vpSlideShow"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_180sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:text="@string/text_news"
                android:textColor="@color/colorText"
                android:textSize="@dimen/_10sdp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvNews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:text="@string/text_category"
            android:textColor="@color/colorText"
            android:textSize="@dimen/_10sdp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvOnGoing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp" />

        <ProgressBar
            android:id="@+id/sbTL"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:text="@string/text_onGoing"
            android:textColor="@color/colorText"
            android:textSize="@dimen/_10sdp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvOnGoing1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:text="@string/text_type_love"
            android:textColor="@color/colorText"
            android:textSize="@dimen/_10sdp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvOnGoing2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp" />


    </LinearLayout>
</layout>