<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:id="@+id/containerFS"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            android:orientation="vertical"
            android:weightSum="8">

            <!--Menu header-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:background="@color/colorBack">

                <ImageView
                    android:id="@+id/imLogo"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_menu_black_24dp" />

                <ImageView
                    android:id="@+id/btSearch"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_search_black_24dp" />

            </RelativeLayout>
            <!--End Menu header-->

            <!--Main-->

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6.9"
                android:fillViewport="true">

                <FrameLayout
                    android:id="@+id/mainFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"


                    />
            </ScrollView>
            <!--End Main-->
            <!--Menu footer -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:background="@color/colorBack"
                android:orientation="horizontal"
                android:weightSum="4">

                <LinearLayout
                    android:id="@+id/btHome"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_home_black_24dp" />

                    <TextView
                        android:id="@+id/tvHome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/text_home"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/_8sdp" />
                </LinearLayout>
                <!--HOt-->
                <LinearLayout
                    android:id="@+id/btHot"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgHot"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_whatshot_black_24dp" />

                    <TextView
                        android:id="@+id/tvHot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/text_hot"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/_8sdp" />
                </LinearLayout>
                <!--End hot-->
                <LinearLayout
                    android:id="@+id/btHistory"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView

                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_watch_later_black_24dp" />

                    <TextView
                        android:id="@+id/tvHistory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/text_history"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/_8sdp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btUser"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_person_black_24dp" />

                    <TextView
                        android:id="@+id/tvUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/text_user"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/_8sdp" />
                </LinearLayout>

            </LinearLayout>
            <!--End Menu footer-->


        </LinearLayout>
    </FrameLayout>
</layout>